--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,8 @@ button {
 
 .list-item {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  width: 90%;
   align-items: baseline;
   padding: 15px;
   font-size: 1.44rem;
@@ -81,8 +82,18 @@ button {
   visibility: visible;
 }
 
+.list-item-input {
+  width: 99%;
+  height: 60px;
+  padding-top: 15px;
+  background: rgba(0, 0, 0, 0.003);
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 8px;
+  display: flex;
+  align-items: baseline;
+}
+
 .list-text {
-  margin-left: -70%;
+  margin-left: 5%;
 }
 
 .close-button {
